--- a/_/css/main.css
+++ b/_/css/main.css
@@ -27,16 +27,26 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 300; }
 
 h1 {
+  margin-bottom: 10px;
   font-size: 3.0rem;
+  font-weight: 400;
   line-height: 1.2;
+  letter-spacing: .05em;
   color: #fff; }
+  @media (min-width: 600px) {
+    h1 {
+      font-weight: 300; } }
 
 h2 {
   font-size: 1rem;
+  font-weight: 500;
   line-height: 1;
-  letter-spacing: .2em;
+  letter-spacing: .3em;
   text-transform: uppercase;
   color: #fff; }
+  @media (min-width: 600px) {
+    h2 {
+      font-weight: 300; } }
 
 h3 {
   font-size: 1.7rem;
@@ -75,43 +85,108 @@ a {
 /* Layout Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .inner-wrapper {
-  width: 90%;
+  width: 85%;
   margin: 0 auto; }
+  @media (min-width: 600px) {
+    .inner-wrapper {
+      width: 80%; } }
+  @media (min-width: 1300px) {
+    .inner-wrapper {
+      max-width: 1100px; } }
 
 /* Header Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 header {
-  padding: 20px 0;
+  padding: 25px 0;
   width: 100%;
   height: 90px;
-  background-color: rgba(0, 0, 0, 0.8); }
+  background-color: rgba(35, 31, 32, 0.7);
+  position: relative; }
   header h1 {
     float: left; }
 
 .tagline {
   display: none; }
-  @media (min-width: 600px) {
+  @media (min-width: 750px) {
     .tagline {
-      display: block; } }
+      display: inline-block;
+      margin: 16px 0 0 50px; } }
 
 nav {
   float: right; }
   nav ul {
-    list-style: none; }
+    list-style: none;
+    margin: 7px 0 0 0; }
   nav li {
-    display: inline-block; }
+    display: inline-block;
+    margin-left: 10px; }
 
 /* Main
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 main {
+  padding: 30px;
   width: 100vw;
   height: 100vh;
   background-image: url(../assets/projects/parkers/parkers-homepage-hero.jpg);
   background-size: cover;
-  background-position: center bottom; }
+  background-position: bottom center; }
+  @media (min-width: 600px) {
+    main {
+      padding: 0; } }
 
 .homepage-main {
   margin-top: -90px;
   padding-top: 120px; }
+
+@media (min-width: 600px) {
+  .project-description {
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 10vh; } }
+@media (min-width: 900px) {
+  .project-description {
+    margin-top: 14vh; } }
+@media (min-width: 1300px) {
+  .project-description {
+    max-width: 1100px;
+    margin-top: 65vh; } }
+
+/* Buttons
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+/* Reset `button` and button-style `input` default styles */
+input[type="submit"],
+input[type="reset"],
+input[type="button"],
+button {
+  background: none;
+  border: 0;
+  color: inherit;
+  /* cursor: default; */
+  font: inherit;
+  line-height: normal;
+  overflow: visible;
+  padding: 0;
+  -webkit-appearance: button;
+  /* for input */
+  -webkit-user-select: none;
+  /* for button */
+  -moz-user-select: none;
+  -ms-user-select: none; }
+
+input::-moz-focus-inner,
+button::-moz-focus-inner {
+  border: 0;
+  padding: 0; }
+
+button {
+  padding: 10px 15px;
+  font-size: .8em;
+  font-weight: 500;
+  letter-spacing: .3em;
+  text-transform: uppercase;
+  background-color: rgba(225, 225, 225, 0.2); }
+
+.hero-button {
+  margin-top: 8px; }
 
 /*# sourceMappingURL=main.css.map */
