--- a/_/scss/base.scss
+++ b/_/scss/base.scss
@@ -30,17 +30,29 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 300; }
   
 h1 { 
+	margin-bottom: 10px;
 	font-size: 3.0rem;
+	font-weight: 400;
 	line-height: 1.2;
+	letter-spacing: .05em;
 	color: $white;
+	
+	@media (min-width: 600px) {
+		font-weight: 300;
+	}
 }
 
 h2 { 
-	font-size: 1rem; 
+	font-size: 1rem;
+	font-weight: 500; 
 	line-height: 1; 
-	letter-spacing: .2em;
+	letter-spacing: .3em;
 	text-transform: uppercase;
 	color: $white;
+	
+	@media (min-width: 600px) {
+		font-weight: 300;
+	}
 }
 h3 { 
 	font-size: 1.7rem; 
