--- a/_/scss/layout.scss
+++ b/_/scss/layout.scss
@@ -2,6 +2,16 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .inner-wrapper {
-	width: 90%;
+	width: 85%;
 	margin: 0 auto;
+	
+	@media (min-width: 600px) {
+		width: 80%;
+	}
+	
+	@media (min-width: 1300px) {
+		max-width: 1100px;
+	}
+	
+	
 }
