--- a/_/scss/modules/header.scss
+++ b/_/scss/modules/header.scss
@@ -2,10 +2,11 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 header {
-	padding: 20px 0;
+	padding: 25px 0;
 	width: 100%;
 	height: 90px;
-	background-color: rgba(0, 0, 0, .8);
+	background-color: rgba(35, 31, 32, .7);
+	position: relative;
 	
 	h1 {
 		float: left;
@@ -15,8 +16,9 @@ header {
 .tagline {
 	display: none;
 	
-	@media (min-width: 600px) {
-		display: block;
+	@media (min-width: 750px) {
+		display: inline-block;
+		margin: 16px 0 0 50px;
 	}
 }
 
@@ -25,9 +27,11 @@ nav {
 	
 	ul {
 		list-style: none;
+		margin: 7px 0 0 0;
 	}
 	
 	li {
 		display: inline-block;
+		margin-left: 10px;
 	}
 }
