functioning responsive work menu

--- a/_/scss/main.scss
+++ b/_/scss/main.scss
@@ -3,4 +3,6 @@
 @import 'layout';
 @import 'modules/header';
 @import 'modules/homepage-main';
+@import 'modules/states';
 @import 'modules/buttons';
+@import 'modules/work-menu';
