--- a/_/css/main.css
+++ b/_/css/main.css
@@ -31,11 +31,11 @@ h1 {
   font-size: 3.0rem;
   font-weight: 400;
   line-height: 1.2;
-  letter-spacing: .05em;
+  letter-spacing: .07em;
   color: #fff; }
   @media (min-width: 600px) {
     h1 {
-      font-weight: 300; } }
+      font-weight: 100; } }
 
 h2 {
   font-size: 1rem;
@@ -69,7 +69,14 @@ h6 {
   letter-spacing: 0; }
 
 p {
-  margin-top: 30px; }
+  margin-top: 10px;
+  color: rgba(255, 255, 255, 0.9);
+  letter-spacing: .05em;
+  font-weight: 400; }
+  @media (min-width: 600px) {
+    p {
+      font-weight: 100;
+      letter-spacing: .08em; } }
 
  /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -97,6 +104,7 @@ a {
 /* Header Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 header {
+  z-index: 1;
   padding: 25px 0;
   width: 100%;
   height: 90px;
@@ -111,6 +119,9 @@ header {
     .tagline {
       display: inline-block;
       margin: 16px 0 0 50px; } }
+  @media (min-width: 1200px) {
+    .tagline {
+      margin-left: 200px; } }
 
 nav {
   float: right; }
@@ -124,6 +135,8 @@ nav {
 /* Main
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 main {
+  z-index: -1;
+  position: relative;
   padding: 30px;
   width: 100vw;
   height: 100vh;
@@ -150,6 +163,11 @@ main {
   .project-description {
     max-width: 1100px;
     margin-top: 65vh; } }
+
+/* States
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.isHidden {
+  display: none; }
 
 /* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -185,8 +203,62 @@ button {
   letter-spacing: .3em;
   text-transform: uppercase;
   background-color: rgba(225, 225, 225, 0.2); }
+  @media (min-width: 600px) {
+    button {
+      font-weight: 300; } }
 
 .hero-button {
   margin-top: 8px; }
+
+.work-menu-button {
+  background-color: rgba(225, 225, 225, 0.4); }
+
+/* Work Menu
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.work-menu {
+  top: 0;
+  position: absolute;
+  padding: 90px 0 30px 0;
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  background-color: rgba(0, 0, 0, 0.9); }
+  @media (min-width: 600px) {
+    .work-menu {
+      right: 0;
+      padding: 90px 20px 0 20px;
+      width: 60%;
+      max-width: 430px;
+      background-color: rgba(0, 0, 0, 0.8); } }
+  @media (min-width: 1200px) {
+    .work-menu {
+      width: 530px;
+      padding-bottom: 30px;
+      background-color: rgba(0, 0, 0, 0.5); } }
+
+.project-item {
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 30px;
+  overflow: auto; }
+
+.project-thumbnail {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 55px;
+  height: 55px;
+  float: right; }
+  @media (min-width: 600px) {
+    .project-thumbnail {
+      margin-top: 5px;
+      float: left; } }
+
+.work-project-description {
+  width: 75%;
+  max-width: 300px;
+  float: right; }
+  @media (min-width: 600px) {
+    .work-project-description {
+      float: right; } }
 
 /*# sourceMappingURL=main.css.map */
