--- a/_/scss/base.scss
+++ b/_/scss/base.scss
@@ -34,11 +34,11 @@ h1 {
 	font-size: 3.0rem;
 	font-weight: 400;
 	line-height: 1.2;
-	letter-spacing: .05em;
+	letter-spacing: .07em;
 	color: $white;
 	
 	@media (min-width: 600px) {
-		font-weight: 300;
+		font-weight: 100;
 	}
 }
 
@@ -65,7 +65,16 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 
 
 p {
-  margin-top: 30px; }
+  margin-top: 10px;
+  color: rgba(255,255,255,.9);
+  letter-spacing: .05em;
+  font-weight: 400;
+  
+  @media (min-width: 600px) {
+	  font-weight: 100;
+	  letter-spacing: .08em;
+  }
+  }
  
  
  
