--- a/_/scss/modules/header.scss
+++ b/_/scss/modules/header.scss
@@ -2,6 +2,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 header {
+	z-index: 1;
 	padding: 25px 0;
 	width: 100%;
 	height: 90px;
@@ -19,6 +20,10 @@ header {
 	@media (min-width: 750px) {
 		display: inline-block;
 		margin: 16px 0 0 50px;
+	}
+	
+	@media (min-width: 1200px) {
+		margin-left: 200px;
 	}
 }
 
