--- a/_/scss/modules/homepage-main.scss
+++ b/_/scss/modules/homepage-main.scss
@@ -2,6 +2,8 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 main {
+	z-index: -1;
+	position: relative;
 	padding: 30px;
 	width: 100vw;
 	height: 100vh;
