--- a/_/scss/base.scss
+++ b/_/scss/base.scss
@@ -35,7 +35,6 @@ h1 {
 	font-weight: 400;
 	line-height: 1.2;
 	letter-spacing: .07em;
-	color: $white;
 	
 	@media (min-width: 600px) {
 		font-weight: 100;
@@ -45,19 +44,24 @@ h1 {
 h2 { 
 	font-size: 1rem;
 	font-weight: 500; 
-	line-height: 1; 
+	line-height: 2em; 
 	letter-spacing: .3em;
 	text-transform: uppercase;
-	color: $white;
 	
 	@media (min-width: 600px) {
 		font-weight: 300;
 	}
 }
 h3 { 
-	font-size: 1.7rem; 
-	line-height: 1.3;  
-	letter-spacing: 0; 
+	font-size: 1.6rem; 
+	line-height: 1.7em;  
+	letter-spacing: .05em; 
+	font-weight: 400;
+	margin-bottom: 50px;
+	
+	@media (min-width: 600px) {
+		font-weight: 400;
+	}
 }
 h4 { font-size: 1.3rem; line-height: 1.35; letter-spacing: 0; }
 h5 { font-size: 1.1rem; line-height: 1.5;  letter-spacing: .1em; }
@@ -66,12 +70,12 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 
 p {
   margin-top: 10px;
-  color: rgba(255,255,255,.9);
   letter-spacing: .05em;
+  line-height: 1.9;
   font-weight: 400;
   
   @media (min-width: 600px) {
-	  font-weight: 100;
+	  font-weight: 300;
 	  letter-spacing: .08em;
   }
   }
