--- a/_/scss/modules/header.scss
+++ b/_/scss/modules/header.scss
@@ -2,12 +2,14 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 header {
+	position: fixed;
+	top: 0;
+	left: 0;
 	z-index: 1;
 	padding: 25px 0;
 	width: 100%;
 	height: 90px;
 	background-color: rgba(35, 31, 32, .7);
-	position: relative;
 	
 	h1 {
 		float: left;
@@ -19,7 +21,7 @@ header {
 	
 	@media (min-width: 750px) {
 		display: inline-block;
-		margin: 16px 0 0 50px;
+		margin: 10px 0 0 50px;
 	}
 	
 	@media (min-width: 1200px) {
