--- a/_/scss/modules/homepage-main.scss
+++ b/_/scss/modules/homepage-main.scss
@@ -2,14 +2,6 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 main {
-	z-index: -1;
-	position: relative;
-	padding: 30px;
-	width: 100vw;
-	height: 100vh;
-	background-image: url(../assets/projects/parkers/parkers-homepage-hero.jpg);
-	background-size: cover;
-	background-position: bottom center;
 	
 	@media (min-width: 600px){
 		padding: 0;
@@ -17,8 +9,15 @@ main {
 }
 
 .homepage-main {
-	margin-top: -90px;
+	padding: 30px;
+	position: relative;
 	padding-top: 120px;
+	width: 100vw;
+	height: 100vh;
+	color: $white;
+	background-image: url(../assets/projects/parkers/parkers-homepage-hero.jpg);
+	background-size: cover;
+	background-position: bottom center;
 }
 
 .project-description {
