--- a/_/scss/modules/work-menu.scss
+++ b/_/scss/modules/work-menu.scss
@@ -8,27 +8,30 @@
 	width: 100%;
 	height: 100%;
 	overflow: scroll;
-	background-color: rgba(0, 0, 0, .9);
+	background-color: $grey;
 	
 	@media (min-width: 600px) {
 		right: 0;
 		padding: 90px 20px 0 20px;
-		width: 60%;
-		max-width: 430px;
-		background-color: rgba(0, 0, 0, .8);
+		width: 50%;
 	}
 	
-	@media (min-width: 1200px) {
-		width: 530px;
-		padding-bottom: 30px;
-		background-color: rgba(0, 0, 0, .5);
+	@media (min-width: 1100px) {
+		width: 40%
 	}
+	
+	@media (min-width: 1400px) {
+		width: 35%;
+		padding: 140px 80px 30px 80px;
+	}
+	
+	
 }
 
 .project-item {
 	width: 90%;
 	margin: 0 auto;
-	margin-top: 30px;
+	margin-top: 40px;
 	overflow: auto;
 }
 
@@ -40,15 +43,18 @@
 	float: right;
 	
 	@media (min-width: 600px) {
-		margin-top: 5px;
+		margin-top: 0px;
 		float: left;
 	}
 }
 
 .work-project-description {
 	width: 75%;
-	max-width: 300px;
 	float: right;
+	
+	h1{
+		font-size: 1.8em;
+	}
 	
 	@media (min-width: 600px) {
 		float: right;
