work menu overflow

--- a/_/css/main.css
+++ b/_/css/main.css
@@ -250,7 +250,8 @@ button::-moz-focus-inner {
 .project-item {
   width: 90%;
   margin: 0 auto;
-  margin-top: 40px; }
+  margin-top: 40px;
+  overflow: auto; }
 
 .project-thumbnail {
   margin-top: 10px;
