--- a/_/scss/modules/work-menu.scss
+++ b/_/scss/modules/work-menu.scss
@@ -24,14 +24,13 @@
 		width: 35%;
 		padding: 140px 80px 30px 80px;
 	}
-	
-	
 }
 
 .project-item {
 	width: 90%;
 	margin: 0 auto;
 	margin-top: 40px;
+	overflow: auto;
 }
 
 .project-thumbnail {
