--- a/_/scss/modules/project-main.scss
+++ b/_/scss/modules/project-main.scss
@@ -110,3 +110,37 @@
 .catapult-project-hero {
 	background-image: url(../assets/projects/catapult/catapult-hero.jpg);
 }
+
+.innovation_space-project-hero {
+	background-image: url(../assets/projects/innovation_space/kwill-hero.jpg);
+}
+
+.innovation_space-amedy-project-hero {
+	background-image: url(../assets/projects/innovation_space/amedy-logo.jpg);
+	background-position: center center;
+}
+
+.innovation_space-satlas-project-hero {
+	background-image: url(../assets/projects/innovation_space/satlas-logo.jpg);
+	background-position: center center;
+}
+
+.innovation_space-phero-project-hero {
+	background-image: url(../assets/projects/innovation_space/phero-logo.jpg);
+	background-position: center center;
+}
+
+.cluster-project-hero {
+	background-image: url(../assets/projects/cluster/cluster-hero.jpg);
+	background-position: center center;
+}
+
+.duo-project-hero {
+	background-image: url(../assets/projects/duo_records/duo-hero.jpg);
+	background-position: center center;
+}
+
+.frm-project-hero {
+	background-image: url(../assets/projects/frm/frm-logo.jpg);
+	background-position: center center;
+}
