--- a/_/css/main.css
+++ b/_/css/main.css
@@ -213,7 +213,10 @@ button::-moz-focus-inner {
   font-weight: 500;
   letter-spacing: .3em;
   text-transform: uppercase;
-  background-color: rgba(225, 225, 225, 0.2); }
+  background-color: rgba(225, 225, 225, 0.2);
+  height: 40px;
+  margin-bottom: 5px;
+  line-height: 1.8em; }
   @media (min-width: 600px) {
     .button {
       font-weight: 300; } }
@@ -222,7 +225,11 @@ button::-moz-focus-inner {
   margin-top: 8px; }
 
 .work-menu-button {
-  background-color: rgba(225, 225, 225, 0.4); }
+  display: block; }
+
+.project-button {
+  margin-top: -15px;
+  display: block; }
 
 /* Work Menu
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -361,5 +368,32 @@ button::-moz-focus-inner {
 
 .catapult-project-hero {
   background-image: url(../assets/projects/catapult/catapult-hero.jpg); }
+
+.innovation_space-project-hero {
+  background-image: url(../assets/projects/innovation_space/kwill-hero.jpg); }
+
+.innovation_space-amedy-project-hero {
+  background-image: url(../assets/projects/innovation_space/amedy-logo.jpg);
+  background-position: center center; }
+
+.innovation_space-satlas-project-hero {
+  background-image: url(../assets/projects/innovation_space/satlas-logo.jpg);
+  background-position: center center; }
+
+.innovation_space-phero-project-hero {
+  background-image: url(../assets/projects/innovation_space/phero-logo.jpg);
+  background-position: center center; }
+
+.cluster-project-hero {
+  background-image: url(../assets/projects/cluster/cluster-hero.jpg);
+  background-position: center center; }
+
+.duo-project-hero {
+  background-image: url(../assets/projects/duo_records/duo-hero.jpg);
+  background-position: center center; }
+
+.frm-project-hero {
+  background-image: url(../assets/projects/frm/frm-logo.jpg);
+  background-position: center center; }
 
 /*# sourceMappingURL=main.css.map */
