--- a/_/scss/modules/project-main.scss
+++ b/_/scss/modules/project-main.scss
@@ -144,3 +144,13 @@
 	background-image: url(../assets/projects/frm/frm-logo.jpg);
 	background-position: center center;
 }
+
+.canadian_molson-project-hero {
+	background-image: url(../assets/projects/canadian_molson/canadian_molson-hero.jpg);
+	background-position: center center;
+}
+
+.gnat_warfare-project-hero {
+	background-image: url(../assets/projects/gnat_warfare/gnat_warfare-logo.jpg);
+	background-position: center center;
+}
